# Macrograd

./: .gitignore  CMakeLists.txt  README.md  macrograd.cpp  model_mediator.cpp  model_mediator.h  output_handler.cpp  output_handler.h
.github/workflows/: macrograd-ci-cd.yml
buildingblocks/: CMakeLists.txt  Mat.cpp  Mat.h  Node.cpp  Node.h
datasetreader/: CMakeLists.txt  CSVReader.cpp  CSVReader.h  DataSetReader.cpp  DataSetReader.h  DataSetsPathConfig.h  MNISTReader.cpp  MNISTReader.h
datasets/communities/: a.out  test_io.cpp
filereaders/: FileReader.h
ioutils/: IOUtils.cpp  IOUtils.h
jsons/: communities.json  connected_model.json  simple_json.json
layers/: CMakeLists.txt  Layer.cpp  Layer.h  LayerUtils.cpp  Linear.cpp  Linear.h  MatUtils.cpp  MatUtils.h
layers/buildingblocks/: Mat.cpp  Mat.h  Node.cpp  Node.h  Vec3D.cpp  Vec3D.h
layers/learningrates/: CMakeLists.txt
layers/lossfn/: CMakeLists.txt  LossFn.h  MeanSquaredError.cpp  MeanSquaredError.h
layers/lossfns/: CMakeLists.txt  MeanSquaredError.cpp  RootMeanSquaredError.cpp  SoftmaxCrossEntropyLoss.cpp
layers/operators/: Broadcast.cpp  Operator.cpp
model/: CMakeLists.txt  Model.cpp  Model.h  ModelBuilder.h
operators/: CMakeLists.txt  Operator.cpp  Operator.h  Pow.h  TanH.cpp  TanH.h
python_notebooks/: Macrograd-One-Function-Call.ipynb  Macrograd.ipynb  analyzing_mnist_data.ipynb
tests/: BuildingBlocksTests.cpp  CMakeLists.txt  DataSetReadersTest.cpp  LayersTest.cpp  LossFnsTest.cpp  MatUtilsTest.cpp  ModelBuilderTest.cpp  ModelTest.cpp  NodeSanityTest.cpp  OperatorsTest.cpp  TanHTest.cpp  Test.cpp  Vec3DTest.cpp
valgrind-logs/: BuildingBlocksHeap.txt  OperatorsHeap.txt
